Error button not centered bug fix

--- a/src/client/components/pages/ProcessingPage.module.css
+++ b/src/client/components/pages/ProcessingPage.module.css
@@ -50,3 +50,7 @@
     display: flex;
     justify-content: center;
 }
+
+.error {
+    text-align: center;
+}
